--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "homepage": "https://github.com/zhalagash-it/auyl-taxi-server#readme",
     "dependencies": {
         "express": "^4.17.1",
+        "mysql2": "^2.2.5",
+        "sequelize": "^6.5.0",
         "socket.io": "^3.1.2"
     }
 }
