--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "homepage": "https://github.com/zhalagash-it/auyl-taxi-server#readme",
     "dependencies": {
         "express": "^4.17.1",
+        "mariadb": "^2.5.3",
         "mysql2": "^2.2.5",
         "sequelize": "^6.5.0",
+        "sequelize-auto": "^0.8.0",
         "socket.io": "^3.1.2"
     }
 }
