--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
         "express": "^4.17.1",
         "mariadb": "^2.5.3",
         "mysql2": "^2.2.5",
-        "sequelize": "^6.5.0",
+        "sequelize": "5.22.3",
         "sequelize-auto": "^0.8.0",
         "socket.io": "^3.1.2"
     }
