--- a/package.json
+++ b/package.json
@@ -25,10 +25,7 @@
     "homepage": "https://github.com/zhalagash-it/auyl-taxi-server#readme",
     "dependencies": {
         "express": "^4.17.1",
-        "mariadb": "^2.5.3",
-        "mysql2": "^2.2.5",
-        "sequelize": "5.22.3",
-        "sequelize-auto": "^0.8.0",
+        "mysql": "^2.18.1",
         "socket.io": "^3.1.2"
     }
 }
