simple model Tutorials and his routes added

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "auyl taxi server",
     "main": "index.js",
     "scripts": {
-        "dev": "node index.js",
+        "prod": "NODE_ENV=production node server.js",
+        "dev": "node server.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
@@ -25,8 +26,10 @@
     "homepage": "https://github.com/zhalagash-it/auyl-taxi-server#readme",
     "dependencies": {
         "express": "^4.17.1",
-        "mariadb": "^2.5.3",
-        "mysql": "^2.18.1",
+        "body-parser": "^1.19.0",
+        "cors": "^2.8.5",
+        "mysql2": "^2.0.2",
+        "sequelize": "^5.21.2",
         "socket.io": "^3.1.2"
     }
 }
