--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
     "description": "auyl taxi server",
     "main": "index.js",
     "scripts": {
-        "prod": "NODE_ENV=production node server.js",
-        "dev": "node server.js",
+        "dev": "node index.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
