--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
     "name": "auyl-taxi-server",
     "version": "1.0.0",
     "description": "auyl taxi server",
-    "main": "index.js",
+    "main": "server.js",
     "scripts": {
-        "dev": "node index.js",
+        "dev": "node server.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
